add link to account recipe + bearer token auth.
