# src/app/Http/Controllers/Controller.php
@@ -9,6 +9,14 @@ use Illuminate\Routing\Controller as BaseController;
 
 /** @OA\Info(title="Foods", version="0.1") */
 
+/**
+@OAS\SecurityScheme(
+securityScheme="bearerAuth",
+type="http",
+scheme="bearer"
+)
+ **/
+
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
